add new stuffs for sponsors

--- a/events.html
+++ b/events.html
@@ -110,17 +110,15 @@
     <div class="content-section-b" style="margin-top: 80px;">
         <div class="container">
             <div class="panel panel-primary text-center">
-           <div class="panel-heading" style="font-size: 24px;"> OUR 2016 BRAVO! EVENT IS UNDERWAY!
+           <div class="panel-heading" style="font-size: 24px;"> OUR 2017 BRAVO! Saturday, August 12th, 2017
            </div>
            <div class="panel-body" style="text-align: left;">
              <img alt="Background Image" src="img/events/bravo2016.png" class="img-responsive" alt=""> <br>
-             Join us at Berkeley High School on Saturday, August 13 th to celebrate our 5 th annual BRAVO! Event. <br> <br>
              BRAVO! is an exhibition of knowledge and a celebration of youth development. We kick-off this
              celebration with the science poster competition of Biotech Partners’ high school Biotech Academy
-             summer interns – nearly 70 students – as well as an awards ceremony for the interns and young
-             professionals who have completed our community college programs. 
-             We also take this opportunity to
-             recognize and thank our funders, intern hosts and mentors, such as you, and other partners. <br> <br>
+             summer interns as well as an awards ceremony for the interns and young professionals who have
+             completed our community college programs. We also take this opportunity to recognize and thank our
+             funders, intern hosts and mentors, such as you, and other partners. <br> <br>
        
              Support Biotech Partners and <a href="https://www.eventbrite.com/e/biotech-partners-2016-bravo-celebration-tickets-26336368788">register</a> to attend the event here: <a href="https://www.eventbrite.com/e/biotech-partners-2016-bravo-celebration-tickets-26336368788">https://www.eventbrite.com/e/biotech-partners-2016-bravo-celebration-tickets-26336368788</a>
              <br>
