--- a/pastevents.html
+++ b/pastevents.html
@@ -125,16 +125,33 @@
         <div class="container">
             <div class="col-md-4">
                 <img src="img/events/bravo2016.png" class="img-responsive" alt="">
+                <br>
+                <img src="img/events/bravo2016/_MG_0132.jpg" class="img-responsive" alt="">
             </div>
             <div class="col-xs-12 col-md-8">
                <p class="lead" style="font-size: 17px;">                        
                     <b>BRAVO! 2016 </b>
                     <br>
-                    Our 5th annual BRAVO! Event. Celebrated Biotech Partners student at Berkeley High School on Saturday, August 13th.
+                    Our 5th annual BRAVO! Event. Celebrated Biotech Partners student at Berkeley High School on Saturday,
+                    August 12th, 2016
                     <br>
-                    BRAVO! is an exhibition of knowledge and a celebration of youth development. We kick-off this celebration with the science poster competition of Biotech Partners’ high school Biotech Academy summer interns – nearly 70 students – as well as an awards ceremony for the interns and young professionals who have completed our community college programs.
-                    We also take this opportunity to recognize and thank our funders, intern hosts and mentors, such as you, and other partners. 
                     <br>
+                    BRAVO! 2016 event underscored our success in launching the Biotech Academy in our
+                    expansion sites and connecting with over 30 new industry-based internship hosts to support
+                    our 2016 Summer Internships Program.  
+                    66 Students celebrated the completion of Biotech Partners’ 2016 Summer Internships, with our
+                    first cohort of students from our expansion public school high schools, Antioch and South San
+                    Francisco, joining the ranks of our legacy schools, Berkeley and Oakland Tech.  
+                    <br>
+                    <br>
+                    51 Volunteers (including industry partner employees) from the Greater Bay Area regions with
+                    science, medical, public health, law, IT and business backgrounds served as judges to select the
+                    awardees for the following categories: Best (Overall- includes all the other 3 categories), Most
+                    Educational, Most Creative, and Best Oral Presentation. Berkeley and Antioch high school
+                    students were awarded and recognized for the categories.
+                    <br>
+                    We also take this opportunity to recognize and thank our funders, intern hosts and mentors, such as
+                    you, and other partners. 
                     <br>
                     <a href="https://www.flickr.com/photos/biotech_partners/8653224820/">Check This Event</a>
                 </p>
