--- a/sponsors.html
+++ b/sponsors.html
@@ -135,7 +135,7 @@
     <div class="content-section-b" id="ImpactAnchor">
         <div class="container">
             <div class="row">
-                <h1 class='text-center'>How You Can Help!</h1>
+                <h1 class='text-center'>You Can Help!</h1>
                 <div class="col-md-6">
                     <h2 class="section-heading">
                      Impact
@@ -164,10 +164,12 @@
                      <br>                     
                      <br>
                      <p class="lead">
-                     Mentors who volunteer with Biotech Partners contribute their time and provide assistance in curriculum development and technical support for the program.
-                     This includes working with Biotech Partners' staff to develop a workplan for each student, and receiving guidance and support from Biotech Partners' staff.
-                     Mentors often discover that helping a young person get a start in the working world is rewarding both personally and professionally-particularly if the Biotech Partners' graduate is later hired at the mentor's organization.</p>                  
-                    </h2>                    
+                     Mentors who volunteer with Biotech Partners contribute their time and provide assistance in curriculum
+                    development and technical support for the program. This includes working with Biotech Partners' staff
+                    to develop a work plan for each student, and receiving guidance and support from Biotech Partners'
+                    staff. Mentors often discover that helping a young person get a start in the working world is rewarding
+                    both personally and professionally-particularly if the Biotech Partners&#39; graduate is later hired at the
+                    mentor's organization.</h2>                    
                 </div>
                 <div class="col-sm-6">
                     <img class="img-responsive" src="./img/sponsorspage/MENTOR WEBSITE2.jpg" alt="">
@@ -189,9 +191,10 @@
                      Appreciated Securities
                     </h2>
                      <p class="lead">
-                     By donating appreciated securities such as stocks and mutual funds to Biotech Partners, you may be able benefit from avoiding both Federal and State capital gain taxes. Additionally,
-                     you may be able to deduct the full current market value of the security as charitable contribution in your
-                     income tax return.
+                     By donating appreciated securities such as stocks and mutual funds to Biotech Partners, you may be able
+                     to benefit from avoiding both Federal and State capital gain taxes. Additionally, you may be able to
+                     deduct the full current market value of the security as a charitable contribution on your income tax
+                     return.
                      <br>
                      <br>
                      <b>
@@ -200,7 +203,7 @@
                      <b><br/>
                      Biotech Partners account #756-883931 at TD Ameritrade<br/>
                      Our Tax ID number is 94-3171180<br/><br/>
-                     <em>(Please contact our accountant Erina Atkins-Hadad at<br/> erina@mosscpa.com or 925-482-2631 before your<br/> transfer to ensure proper credits are given)</em>
+                     <em>(Please contact Erina Atkins-Hadad, Account Manager at<br/> erina@mosscpa.com or 925-482-2631 before your<br/> transfer to ensure proper credits are given)</em>
                      </p>                  
                     </h2>            
                 </div>
