--- a/students.html
+++ b/students.html
@@ -128,12 +128,14 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading"> <span class="fa fa-paperclip fa-2x"></span> Biotech Academy </h2>
                     <p class="lead">
-                        If you are a student at Berkeley High School, Oakland Technical High School, or Antioch High School and are interested in exploring a career in biotechnology, Biotech Partners’ Biotech Academy may be right for you!
+                        If you are a high school student at Berkeley, Oakland Tech, Antioch or San Marin and are interested in exploring a career in biotechnology, Biotech Partners’ Biotech Academy may be right for you!
                         <br>
                         <br>
-                        Our academic curriculum and hands-on lab training are designed to give students the knowledge and skills necessary to gain access to a career in biotechnology, a growing industry that offers well-paid jobs and real opportunities for career advancement and continued education. Students enrolled in the Biotech Academy are given the opportunity to complete an 8-week paid summer internship at a bioscience company or institution.
-                        Biotech Academy students receive numerous free support services, including:
+                        Our academic curriculum and hands-on lab training are designed to give students the knowledge and skills necessary to gain access to a career in biotechnology, a growing industry that offers well-paid jobs and real opportunities for career advancement and continued education.
+                        Students enrolled in the Biotech Academy are given the opportunity to complete an 6-8 week paid summer internship at abioscience company or institution.
                         <br>
+                        <br>
+                        Biotech Academy students receive numerous “no-cost” work readiness services, including:
                         <br>
                         <span class="fa fa-check-square"></span> Tutoring in science and study skills
                         <br>
@@ -161,12 +163,10 @@
                 <div class="col-sm-6">
                     <h2 class="section-heading"> <span class="fa fa-gg fa-2x"></span> Bioscience Career Institute (BCI) </h2>
                     <p class="lead">
-                        Upon completion of the Biotech Academy Program, students are eligible to enroll in the Bioscience Career Institute. This two-year program consists of a year-long biotech job and courses which lead to a Certificate of Achievement in Bioscience.
+                        Upon completion of the Biotech Academy Program, students are eligible to enroll in the Bioscience Career Institute. This two-year program consists of a year-long biotech job and courses which lead to a Certificate of Achievement in Bioscience.<br>
                         <br>
-                        <br>
-                        Graduates qualify for biotech positions earning $35,000- $45,000 per year and receive help finding job opportunities. 
+                        Graduates qualify for entry-level biotech positions earning $35,000- $50,000 per year and receive help finding job opportunities.
                     </p>
-                
                 </div>
             </div>
         </div>
@@ -181,7 +181,7 @@
                     <div class="clearfix"></div>
                     <h2>Interested in our programs?</h2>
                     <p class="lead">
-                        Contact Lynda Gayden with lgayden@biotechpartners.org to arrange a consultation. Fees apply.
+                        Contact Lynda Gayden with lgayden@biotechpartners.org for more information.
                     </p>
                 </div>
                 <div class="col-sm-6">
