--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         BRAVO! 2016!
                         <br>
                         <br>
-                        Biotech Partners was at Berkeley High School on Saturday, August 13th to celebrate our 5th annual BRAVO! Event.
+                        Biotech Partners took place at Berkeley High School on Saturday, August 13th to celebrate our 5th annual BRAVO! Event.
                         <br>
                         <br>
                         BRAVO! is an exhibition of knowledge and a celebration of youth development.
