--- a/students.html
+++ b/students.html
@@ -147,7 +147,7 @@
                     </p>
                 </div>
                 <div class="col-sm-6">
-                    <img class="img-responsive" src="img/events/bravo2016/_MG_0041.jpg" alt="" style="margin-top: 100px;">
+                    <img class="img-responsive" src="./img/events/bravo2016/_MG_0041.jpg" alt="" style="margin-top: 100px;">
                 </div>
             </div>
         </div>
@@ -158,7 +158,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <img class="img-responsive" src="img/events/bravo2016/_MG_0051.jpg" alt="" style="margin-top: 100px;">
+                    <img class="img-responsive" src="./img/events/bravo2016/_MG_0051.jpg" alt="" style="margin-top: 100px;">
                 </div>
                 <div class="col-sm-6">
                     <h2 class="section-heading"> <span class="fa fa-gg fa-2x"></span> Bioscience Career Institute (BCI) </h2>
@@ -185,7 +185,7 @@
                     </p>
                 </div>
                 <div class="col-sm-6">
-                     <img class="img-responsive" src="img/events/bravo2016/_MG_0132.jpg" alt="">
+                     <img class="img-responsive" src="./img/events/bravo2016/_MG_0132.jpg" alt="">
                 </div>
             </div>
         </div>
