--- a/index.html
+++ b/index.html
@@ -297,7 +297,9 @@
                     </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="./img/events/bravo2016.png" alt="">
+                    <br>
+                    <br>
+                    <img class="img-responsive" src="./img/events/bravo2016/MG0132.jpg" alt="">
                 </div>
             </div>
         </div>
