--- a/sponsors.html
+++ b/sponsors.html
@@ -215,77 +215,37 @@
         <div class="container">
             <h1 class='text-center'>Our Core Partnerships</h1>
             <div class="row">
-                <div class="col-md-4 list-group">
+                <div class="col-md-5 col-md-offset-2 list-group">
                     <h3> <em>In-Kind and Support Services Partners </em></h3>
                     <p class="lead"> 
-                    <span class="fa fa-th-large"></span> ABC Photography <br>
-                    <span class="fa fa-th-large"> </span> Barbara Alonso, b-drawn.com <br>
-                    <span class="fa fa-th-large"> </span> Bayer HealthCare <br>
-                    <span class="fa fa-th-large"> </span> Chocolatier Blue <br>
-                    <span class="fa fa-th-large"> </span> Vivien Chan <br>
-                    <span class="fa fa-th-large"> </span> Tina Etcheverry <br>
-                    <span class="fa fa-th-large"> </span> Lynda Gayden <br>
-                    <span class="fa fa-th-large"> </span> Caroline Kane <br>
-                    <span class="fa fa-th-large"> </span> Jamie Kitano <br>
-                    <span class="fa fa-th-large"> </span> Susan Stonebraker <br>
-                    <span class="fa fa-th-large"> </span> Damon Tighe Photography <br>
-                    <span class="fa fa-th-large"> </span> Dudly Thompson <br>
-                    <span class="fa fa-th-large"> </span> Transport Graphics <br>
-                    <span class="fa fa-th-large"> </span> Ryals & Associates <br>
+                    <span class="fa fa-th-large"></span> Bayer HealthCare<br>
+                    <span class="fa fa-th-large"> </span> Latham & Watkins, LLP <br>
+                    <span class="fa fa-th-large"> </span> Linda Inscoe, Esq. <br>
+                    <span class="fa fa-th-large"> </span> Ryals & Associate <br>
                     </p> 
                     <br>          
                 </div>
                 <div class="col-md-4 list-group">
                     <h3> <em>Private and Corporate Foundations </em></h3>
                     <p class="lead"> 
-                    <span class="fa fa-th-large"></span> American Honda Foundation <br>
+                    <span class="fa fa-th-large"></span> American Chemical Society – Project SEED <br>
                     <span class="fa fa-th-large"> </span> Amgen Foundation <br>
-                    <span class="fa fa-th-large"> </span> Ashoka Changemakers Foundation <br>
-                    <span class="fa fa-th-large"> </span> Berkeley Pubilc Education Foundation <br>
-                    <span class="fa fa-th-large"> </span> The California Endowment <br>
-                    <span class="fa fa-th-large"> </span> Chamberlin Family Foundatio <br>
+                    <span class="fa fa-th-large"> </span> AT&T <br>
+                    <span class="fa fa-th-large"> </span> Bayer <br>
+                    <span class="fa fa-th-large"> </span> BioMarin <br>
+                    <span class="fa fa-th-large"> </span> Boehringer Ingelheim <br>
+                    <span class="fa fa-th-large"> </span> City of Berkeley <br>
+                    <span class="fa fa-th-large"> </span> City of Berkeley YouthWorks <br>
                     <span class="fa fa-th-large"> </span> Crescent Porter Hale Foundation <br>
-                    <span class="fa fa-th-large"> </span> Dreyer´s Grand Ice Cream Foundation <br>
-                    <span class="fa fa-th-large"> </span> East Bay Community Foundation <br>
-                    <span class="fa fa-th-large"> </span> Howard Hughes Medical Institute <br>
-                    <span class="fa fa-th-large"> </span> Irene S. Scullly Foundation <br>
-                    <span class="fa fa-th-large"> </span> The James Irvine Foundation <br>
-                    <span class="fa fa-th-large"> </span> Mary Crocker Trust <br>
-                    <span class="fa fa-th-large"> </span> Mitchell Kapor Foundation <br>
-                    <span class="fa fa-th-large"> </span> Taproot Foundation <br>
+                    <span class="fa fa-th-large"> </span> Estelle & Ralph Bardoff Memorial Fund <br>
+                    <span class="fa fa-th-large"> </span> Genentech <br>
+                    <span class="fa fa-th-large"> </span> iCLEM <br>
+                    <span class="fa fa-th-large"> </span> Miranda Lux Foundation <br>
+                    <span class="fa fa-th-large"> </span> Morris S. Stulsaft Foundation <br>
                     <span class="fa fa-th-large"> </span> TK Foundation <br>
                     <span class="fa fa-th-large"> </span> Toyota USA Foundation <br>
-                    <span class="fa fa-th-large"> </span> Wayne & Gladys Valley Foundation <br>
-                    <span class="fa fa-th-large"> </span> Willis Foundation <br>
-                    <span class="fa fa-th-large"> </span> Y & H Soda Foundation <br>
                     </p> 
                     <br>          
-                </div>
-                <div class="col-md-4 list-group">
-                   <h3> <em>Corporate, Government, Academic Funding Partners </em></h3>
-                   <p class="lead"> 
-                   <span class="fa fa-th-large"></span> Achaogen, Inc. <br>
-                   <span class="fa fa-th-large"> </span> Alameda County Health Pipeline Partnership (ACHHP) <br>
-                   <span class="fa fa-th-large"> </span> Bayer HealthCare <br>
-                   <span class="fa fa-th-large"> </span> Carway Communications <br>
-                   <span class="fa fa-th-large"> </span> Chamberlin Associates <br>
-                   <span class="fa fa-th-large"> </span> City of Berkeley <br>
-                   <span class="fa fa-th-large"> </span> City of Berkeley YouthWorks <br>
-                   <span class="fa fa-th-large"> </span> Contra Costa & Alameda County Regional Occupational Programs (ROP) <br>
-                   <span class="fa fa-th-large"> </span> Gilead Sciences, Inc. <br>
-                   <span class="fa fa-th-large"> </span> Lawrence Berkeley National Laboratory <br>
-                   <span class="fa fa-th-large"> </span> Mechanics Bank <br>
-                   <span class="fa fa-th-large"> </span> Millipore Corporation <br>
-                   <span class="fa fa-th-large"> </span> Novartis AG <br>
-                   <span class="fa fa-th-large"> </span> Oakland Fund for Children & Youth (OFCY) <br>
-                   <span class="fa fa-th-large"> </span> Oakland Unified School District, School-to-Career Dept. <br>
-                   <span class="fa fa-th-large"> </span> Onyx Pharmaceuticals, Inc. <br>
-                   <span class="fa fa-th-large"> </span> Sartorius Stedim Biotech <br>
-                   <span class="fa fa-th-large"> </span> SynBERC <br>
-                   <span class="fa fa-th-large"> </span> US Department of Agriculture <br>
-                   <span class="fa fa-th-large"> </span> Union Bank <br>
-                   <span class="fa fa-th-large"> </span> Wareham Development <br>
-                   </p>      
                 </div>
             </div>
         </div>
