--- a/sponsors.html
+++ b/sponsors.html
@@ -218,7 +218,7 @@
                 <div class="col-md-5 col-md-offset-2 list-group">
                     <h3> <em>In-Kind and Support Services Partners </em></h3>
                     <p class="lead"> 
-                    <span class="fa fa-th-large"></span> Bayer HealthCare<br>
+                    <span class="fa fa-th-large"></span> Bayer Pharmaceuticals<br>
                     <span class="fa fa-th-large"> </span> Latham & Watkins, LLP <br>
                     <span class="fa fa-th-large"> </span> Linda Inscoe, Esq. <br>
                     <span class="fa fa-th-large"> </span> Ryals & Associate <br>
@@ -231,7 +231,7 @@
                     <span class="fa fa-th-large"></span> American Chemical Society – Project SEED <br>
                     <span class="fa fa-th-large"> </span> Amgen Foundation <br>
                     <span class="fa fa-th-large"> </span> AT&T <br>
-                    <span class="fa fa-th-large"> </span> Bayer <br>
+                    <span class="fa fa-th-large"> </span> Bayer Pharmaceuticals <br>
                     <span class="fa fa-th-large"> </span> BioMarin <br>
                     <span class="fa fa-th-large"> </span> Boehringer Ingelheim <br>
                     <span class="fa fa-th-large"> </span> City of Berkeley <br>
