update a few area

--- a/contactus.html
+++ b/contactus.html
@@ -89,9 +89,8 @@
                     <li class="dropdown">
                         <a href="students.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STUDENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="students.html">INTRODUCTION</a></li>
-                          <li><a href="students.html#AnchorForBiotechAcademy">BIOTECH ACADEMY</a></li>
-                          <li><a href="students.html#AnchorBioscienceCareerInstitute">BIOSCIENCE CAREER INSTITUTE</a></li>                
+                          <li><a href="students.html">BIOTECH ACADEMY</a></li>
+                          <li><a href="students.html#AnchorBioscienceCareerInstitute">BIOSCIENCE CAREER INSTITUTE</a></li>             
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -107,7 +106,7 @@
                         <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">NEWS & EVENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                           <li><a href="followus.html">FOLLOW US</a></li>
-                          <li><a href="blog.html">BLOG</a></li>
+                          <!--<li><a href="blog.html">BLOG</a></li>-->
                           <li><a href="events.html">UPCOMING EVENTS</a></li>
                           <li><a href="pastevents.html">PAST EVENTS</a></li>
                           <li><a href="newsletter.html">NEWSLETTER</a></li>
