--- a/newsletter.html
+++ b/newsletter.html
@@ -43,7 +43,7 @@
     <script>
         $(function() {
             $('#contactusButtonEmail').click(function(){
-                $('#contactusButtonEmail').notify("Subscripting Now ...", "success", { position:"right" });
+                $('#contactusButtonEmail').notify("subscribing Now ...", "success", { position:"right" });
             });
         });
     </script>
@@ -88,9 +88,8 @@
                     <li class="dropdown">
                         <a href="students.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STUDENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="students.html">INTRODUCTION</a></li>
-                          <li><a href="students.html#AnchorForBiotechAcademy">BIOTECH ACADEMY</a></li>
-                          <li><a href="students.html#AnchorBioscienceCareerInstitute">BIOSCIENCE CAREER INSTITUTE</a></li>                 
+                          <li><a href="students.html">BIOTECH ACADEMY</a></li>
+                          <li><a href="students.html#AnchorBioscienceCareerInstitute">BIOSCIENCE CAREER INSTITUTE</a></li>             
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -106,7 +105,7 @@
                         <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">NEWS & EVENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                           <li><a href="followus.html">FOLLOW US</a></li>
-                          <li><a href="blog.html">BLOG</a></li>
+                          <!--<li><a href="blog.html">BLOG</a></li>-->
                           <li><a href="events.html">UPCOMING EVENTS</a></li>
                           <li><a href="pastevents.html">PAST EVENTS</a></li>
                           <li><a href="newsletter.html">NEWSLETTER</a></li>
@@ -185,7 +184,7 @@
                   </fieldset>
               
                   <button class="button-success pure-button button-xlarge" id="contactusButtonEmail">
-                    <i class="fa fa-paper-plane"></i>&nbsp;Subscript
+                    <i class="fa fa-paper-plane"></i>&nbsp;Subscribe
                   </button>
             </form>
               
