--- a/pastevents.html
+++ b/pastevents.html
@@ -71,9 +71,8 @@
                     <li class="dropdown">
                         <a href="students.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STUDENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="students.html">INTRODUCTION</a></li>
-                          <li><a href="students.html#AnchorForBiotechAcademy">BIOTECH ACADEMY</a></li>
-                          <li><a href="students.html#AnchorBioscienceCareerInstitute">BIOSCIENCE CAREER INSTITUTE</a></li>                  
+                          <li><a href="students.html">BIOTECH ACADEMY</a></li>
+                          <li><a href="students.html#AnchorBioscienceCareerInstitute">BIOSCIENCE CAREER INSTITUTE</a></li>             
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -89,7 +88,7 @@
                         <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">NEWS & EVENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                           <li><a href="followus.html">FOLLOW US</a></li>
-                          <li><a href="blog.html">BLOG</a></li>
+                          <!--<li><a href="blog.html">BLOG</a></li>-->
                           <li><a href="events.html">UPCOMING EVENTS</a></li>
                           <li><a href="pastevents.html">PAST EVENTS</a></li>
                           <li><a href="newsletter.html">NEWSLETTER</a></li>
@@ -154,7 +153,8 @@
                     We also take this opportunity to recognize and thank our funders, intern hosts and mentors, such as
                     you, and other partners. 
                     <br>
-                    <a href="https://www.flickr.com/photos/biotech_partners/8653224820/">Check This Event</a>
+                    <br>
+                    <!--<a href="https://www.flickr.com/photos/biotech_partners/8653224820/">Check This Event</a>-->
                 </p>
             </div>
         </div>
