--- a/students.html
+++ b/students.html
@@ -72,9 +72,8 @@
                     <li class="dropdown">
                         <a href="students.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STUDENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="students.html">INTRODUCTION</a></li>
-                          <li><a href="students.html#AnchorForBiotechAcademy">BIOTECH ACADEMY</a></li>
-                          <li><a href="students.html#AnchorBioscienceCareerInstitute">BIOSCIENCE CAREER INSTITUTE</a></li>
+                          <li><a href="students.html">BIOTECH ACADEMY</a></li>
+                          <li><a href="students.html#AnchorBioscienceCareerInstitute">BIOSCIENCE CAREER INSTITUTE</a></li>             
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -90,7 +89,7 @@
                         <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">NEWS & EVENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                           <li><a href="followus.html">FOLLOW US</a></li>
-                          <li><a href="blog.html">BLOG</a></li>
+                          <!--<li><a href="blog.html">BLOG</a></li>-->
                           <li><a href="events.html">UPCOMING EVENTS</a></li>
                           <li><a href="pastevents.html">PAST EVENTS</a></li>
                           <li><a href="newsletter.html">NEWSLETTER</a></li>
@@ -181,7 +180,7 @@
                     <div class="clearfix"></div>
                     <h2>Interested in our programs?</h2>
                     <p class="lead">
-                        Contact Lynda Gayden with lgayden@biotechpartners.org for more information.
+                        contact BPinfo@biotechpartners.org for more information.
                     </p>
                 </div>
                 <div class="col-sm-6">
