--- a/index.html
+++ b/index.html
@@ -281,10 +281,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">2017 Spring Gala</h2>
-                    <p class="lead">                        
-                        2017 Spring Gala - Save the Date! 
-                        <br>
+                    <h2 class="section-heading">2017 Spring Gala - Save the Date!</h2>
+                    <p class="lead">   
                         <br>
                         We invite you to join us for a special evening with friends, dinner and live auction at the 24th Gala Celebration benefiting Biotech Partners. The 24th Celebration will be held on Friday, March 24, 2017, 6:00 p.m.-11:00 p.m. at The San Francisco Galleria Design Center, 101 Henry Adams Street, San Francisco, CA 94013.<br>
                         <br>
