--- a/events.html
+++ b/events.html
@@ -168,13 +168,12 @@
             <a href="http://www.lbl.gov/">
             <img class="background-image" alt="Background Image" src="img/sponsors/Berkeleylab.jpg" style="width: 10%; height: 10%;">
             </a>
-            <img class="background-image" alt="Background Image" src="img/sponsors/EtchWaveConsulting.jpg" style="width: 16%; height: 16%;">
+            <img class="background-image" id="getticketnow" alt="Background Image" src="img/sponsors/EtchWaveConsulting.jpg" style="width: 16%; height: 16%;">
             </div>
          </div>
         </div>
     </div>
 
-    <br>
     <div class="container">
        <div class="panel panel-primary text-center">
          <div class='row'>
