--- a/home.html
+++ b/home.html
@@ -284,13 +284,14 @@
                     <h2 class="section-heading">2017 Spring Gala - Save the Date!</h2>
                     <p class="lead">
                         <br>
-                        We invite you to join us for a special evening with friends, dinner and live auction at the 24th Gala Celebration benefiting Biotech Partners. The 24th Celebration will be held on Friday, March 24, 2017, 6:00 p.m.-11:00 p.m. at The San Francisco Galleria Design Center, 101 Henry Adams Street, San Francisco, CA 94013.<br>
+                        We invite you to join us for a special evening with friends, dinner and live auction at the 24th Gala Celebration benefiting Biotech Partners. The 24th Celebration will be held on Wednesday, May 31, 2017, 6:00 p.m.-11:00 p.m. at the Oakland Marriott City Center, 1001 Broadway Street, Oakland, CA 94607.<br>
                         <br>
                         If you are Interested in sponsoring this event, please contact Gala Chair Tina Etcheverry at etcheverrytina@yahoo.com
                         <br>
                         <br>
                         <a href="events.html" class="btn btn-primary btn-lg" >Learn More</a>
                         <a href="events.html#getticketnow" class="btn btn-danger btn-lg" >Get tickets now</a>
+
                     </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
